--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.declaration.DeclarationActivity">
+        <activity android:name=".view.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.main.MainActivity" />
-        <activity android:name=".view.subjects.SubjectListActivity"></activity>
+        <activity android:name=".view.subjects.SubjectListActivity" />
+        <activity android:name=".view.declaration.DeclarationActivity"></activity>
     </application>
 
 </manifest>
